chore: clean arch & new file struct

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,114 @@
-.EmoVenv
+# ----------------------------------------
+# Python
+# ----------------------------------------
+__pycache__/
+*.pyc
+*.pyo
+*.pyd
+*.pdb
+*.pylintrc
+*.pym
+*.pys
+*$py.class
+
+# Компиляция модулей
+*.so
+
+# ----------------------------------------
+# Virtual environments
+# ----------------------------------------
+venv/
+.env/
+env/
+.venv/
+ENV/
+VENV/
+
+# ----------------------------------------
+# OS files
+# ----------------------------------------
+.DS_Store
+Thumbs.db
+
+# ----------------------------------------
+# Logs & debug
+# ----------------------------------------
+*.log
+logs/
+*.sqlite3
+
+# Aiogram storage
+*.session
+*.session-journal
+
+# ----------------------------------------
+# Dotenv secrets
+# ----------------------------------------
 .env
-__pycache__
-TODO.md
+*.env
+.env.*
+!example.env     # оставляем пример
+
+# ----------------------------------------
+# Build / distribution
+# ----------------------------------------
+build/
+dist/
+pip-wheel-metadata/
+*.egg-info/
+*.egg
+.eggs/
+
+# Wheel
+*.whl
+
+# ----------------------------------------
+# Editor configs
+# ----------------------------------------
+# VS Code
+.vscode/
+
+# PyCharm / JetBrains
+.idea/
+
+# Sublime
+*.sublime-project
+*.sublime-workspace
+
+# ----------------------------------------
+# Test / coverage
+# ----------------------------------------
+.coverage
+htmlcov/
+.coverage.*
+.cache/
+pytest_cache/
+.tox/
+.noseids
+nosetests.xml
+coverage.xml
+
+# ----------------------------------------
+# Jupyter / notebooks
+# ----------------------------------------
+.ipynb_checkpoints
+*.ipynb
+
+# ----------------------------------------
+# Misc
+# ----------------------------------------
+*.bak
+*.temp
+*.tmp
+
+# ----------------------------------------
+# Project-specific
+# (если есть папка assets — можно сохранить)
+# ----------------------------------------
+# Темп файлы
+tmp/
+temp/
+
+# Локальные данные бота
+data/
+storage/
