fix: update command path in docker-compose to point to the correct entry point

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,4 +13,4 @@ services:
       - PYTHONPATH=/app
 
 
-    command: ["/app/venv/bin/python", "/app/core/main.py"]
+    command: ["/app/venv/bin/python", "/app/entrypoints/main.py"]
