--- a/.dockerignore
+++ b/.dockerignore
@@ -1,29 +1,2 @@
-__pycache__/
-*.py[cod]
-*$py.class
-venv/
-env/
-.venv/
-build/
-dist/
-*.egg-info/
-*.egg
-*.whl
-*.log
-.vscode/
-.idea/
-*.sublime-project
-*.sublime-workspace
-.DS_Store
-Thumbs.db
-docker-compose.override.yml
-.coverage
-htmlcov/
-.tox/
-.nox/
-.pytest_cache/
-.cache/
-.env
-*.env
-*.bak
-*.swp
+src/__pycache__
+src/logs/
